--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>gshop</title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_726904_ubdf6pmxsf.css">
     <link rel="stylesheet" href="./static/css/reset.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_518606_6676bmcalnrhehfr.css">
     <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
     <script>
       if ('addEventListener' in document) {
